--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="countdown">
+  <div class="page">
+    <div class="container">
+      <div class="countdown" data-date="2020-10-12 12:00">
+      </div>
+    </div>
   </div>
+
+
 
   <script src="main.js"></script>
 </body>
